Fix the company bar from covering the sticky announcement

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -278,6 +278,10 @@ ul, li {
   background: rgba(0,0,0,0.4)
 }
 
+.navbar-fixed-bottom {
+  bottom: 0;
+}
+
 .sub-header {
   font-size: 28px;
   margin-bottom: 10px;
